Added: contact mail

--- a/craigslist/templates/craigslist/detail.html
+++ b/craigslist/templates/craigslist/detail.html
@@ -20,5 +20,5 @@
 </div>
 
 <div class="fixed-action-btn">
-  <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons" >email</i></a>
+  <a href="{% url 'contact' announce.id %}"class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons" >email</i></a>
 </div>
