--- a/craigslist/templates/craigslist/new.html
+++ b/craigslist/templates/craigslist/new.html
@@ -27,12 +27,12 @@
       {% csrf_token %}
       <div class="row">
         <div class="input-field col s6">
-          <input name="name" id="name" type="text" class="validate" data-length="15" required>
-          <label for="name">Name</label>
+          <input name="author_name" id="author_name" type="text" class="validate" data-length="15" required>
+          <label for="author_name">Name</label>
         </div>
         <div class="input-field col s6">
-          <input name="email" id="email" type="email" class="validate" data-length="70" required>
-          <label for="email">Email</label>
+          <input name="author_email" id="author_email" type="email" class="validate" data-length="70" required>
+          <label for="author_email">Email</label>
           <span class="helper-text" data-error="wrong" data-success="right"></span>
         </div>
       </div>
