--- a/craigslist/templates/craigslist/contact.html
+++ b/craigslist/templates/craigslist/contact.html
@@ -19,16 +19,16 @@
   <h2 class="by"> Author of the announce <i>{{announce.title}} </i></h2>
 
   <div class="row">
-    <form class="col s12" action="{% url 'send_mail' announce.pk %}" method="post">
+    <form class="col s12" action="{% url 'send_mail' %}" method="post">
       {% csrf_token %}
       <div class="row">
         <div class="input-field col s6">
-          <input name="name" id="name" type="text" class="validate" data-length="15" required>
-          <label for="name">Name</label>
+          <input name="author_name" id="author_name" type="text" class="validate" data-length="15" required>
+          <label for="author_name">Name</label>
         </div>
         <div class="input-field col s6">
-          <input name="email" id="email" type="email" class="validate" data-length="70" required>
-          <label for="email">Email</label>
+          <input name="author_email" id="author_email" type="email" class="validate" data-length="70" required>
+          <label for="author_email">Email</label>
           <span class="helper-text" data-error="wrong" data-success="right"></span>
         </div>
       </div>
@@ -38,6 +38,8 @@
           <label for="body">Your message</label>
         </div>
       </div>
+      <input value="{{announce.pk}}" name="announce" id="announce" type="hidden" >
+
       <button class="btn waves-effect waves-light" type="submit" name="action">Send
         <i class="material-icons right">send</i>
       </button>
